Finishing touches. Skipping the auth.

--- a/app/views/legacy/_modal_form.html.erb
+++ b/app/views/legacy/_modal_form.html.erb
@@ -1,7 +1,6 @@
-<!-- Bootstrap trigger to open modal -->
-<a data-toggle="modal" href="#rating-modal" >Import Legacy Purchase Data</a>
+<a data-toggle="modal" href="#import-modal" >Import Legacy Purchase Data</a>
  
-<div class="hide fade modal" id="rating-modal">
+<div class="hide fade modal" id="import-modal">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal">x</button>
     <h2>Import Legacy Purchase Data</h2>
