--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">DataEngineering</a>
+          <a class="brand" href="/">DataEngineering</a>
           <div class="container-fluid nav-collapse">
             <ul class="nav">
               <li><%= link_to "Purchases", purchases_path %></li>
